--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 
-<script src="/app/assets/js/config.js"></script>
-
+<script src="node_modules/angular/angular.min.js"></script>
+<script src="node_modules/angular-route/angular-route.min.js"></script>
+<script src="bower_components/ngGAPI/gapi.js"></script>
+<script async defer src="https://apis.google.com/js/api.js"></script>
+<script src="https://apis.google.com/js/client.js"></script>
+<script src="/assets/js/config.js"></script>
 <ng-view></ng-view>
 
 </body>
