--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>CalenderTest</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href="/assets/style/buttonDesign.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -11,7 +13,8 @@
 <script src="bower_components/ngGAPI/gapi.js"></script>
 <script async defer src="https://apis.google.com/js/api.js"></script>
 <script src="https://apis.google.com/js/client.js"></script>
-<script src="/assets/js/config.js"></script>
+<script src="/assets/js/gapi.js"></script>
+
 <ng-view></ng-view>
 
 </body>
