--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app" ng-csp>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>CalenderTest</title>
@@ -8,14 +8,10 @@
 </head>
 <body>
 
-<script src="node_modules/angular/angular.min.js"></script>
-<script src="node_modules/angular-route/angular-route.min.js"></script>
-<script src="bower_components/ngGAPI/gapi.js"></script>
 <script async defer src="https://apis.google.com/js/api.js"></script>
 <script src="https://apis.google.com/js/client.js"></script>
-<script src="/assets/js/gapi.js"></script>
 
-<ng-view></ng-view>
+<script src="/assets/js/gapi.js"></script>
 
 </body>
 </html>
