--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app" ng-csp>
 <head>
     <meta charset="UTF-8">
     <title>CalenderTest</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-    <link href="/assets/style/buttonDesign.css" type="text/css" rel="stylesheet">
+    <link href="assets/style/buttonDesign.css" rel="stylesheet">
+    <link href="assets/style/mainStyle.css" rel="stylesheet">
 </head>
 <body>
 
+<md-toolbar class="primary">
+    <header class="mainPageHeader">RoomDisplay Prototype</header>
+    <div class="mainPagenNvigation">
+        <span>Homepage</span>
+    </div>
+</md-toolbar>
+
+
+<div id="main">
+    <div ng-view></div>
+</div>
+
+<div>
+    <footer>
+        <md-toolbar class="md-primary">
+            <p class="mainPageFooter">14:25pm</p>
+        </md-toolbar>
+    </footer>
+</div>
+
+<script src="node_modules/angular/angular.min.js"></script>
+<script src="node_modules/angular-material/angular-material.min.js"></script>
+<script src="node_modules/angular-aria/angular-aria.min.js"></script>
+<script src="node_modules/angular-animate/angular-animate.min.js"></script>
+<script src="node_modules/angular-route/angular-route.min.js"></script>
+<script src="node_modules/angular-messages/angular-messages.min.js"></script>
+<script src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
 <script async defer src="https://apis.google.com/js/api.js"></script>
 <script src="https://apis.google.com/js/client.js"></script>
-
 <script src="/assets/js/gapi.js"></script>
-
 </body>
 </html>
