insert and delete now works properly, working on inserting custom events.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body ng-cloak>
 
-<div class="main" flex="65">
+<div class="main" flex="75">
 
-<md-toolbar md-colors="{'background': 'default-accent'}" class="primary">
+<md-toolbar md-colors="{'background': 'default-primary-hue-2'}" class="primary">
     <header class="mainPageHeader">RoomDisplay Prototype</header>
     <div class="indexHeaderButtons">
         <span>
@@ -31,7 +31,7 @@
 
 <div>
     <footer>
-        <md-toolbar class="md-primary">
+        <md-toolbar class="md-primary" md-colors="{'background': 'default-primary-hue-2'}">
             <div class="indexUiClock">
             <ds-widget-clock data-show-digital digital-format="'HH:mm'"></ds-widget-clock>
             </div>
