--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app" ng-csp>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>CalenderTest</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +14,7 @@
 </head>
 <body ng-cloak>
 
-<div class="main" flex="75">
+<div class="main" >
 
 <md-toolbar md-colors="{'background': 'default-primary-hue-2-0.60'}" class="primary">
 
@@ -57,7 +58,7 @@
 
 <script async defer src="https://apis.google.com/js/api.js"></script>
 <script src="https://apis.google.com/js/client.js"></script>
-<script src="/assets/js/gapi.js"></script>
-<script src="/assets/js/index.js"></script>
+<script src="assets/js/gapi.js"></script>
+<script src="assets/js/index.js"></script>
 </body>
 </html>
